examples/test/testpolicy11757.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11757
  namespace: namespace297
spec:
  podSelector:
    matchLabels:
      key14: value28
      key47: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value29
          key21: value44
          key19: value32
      podSelector:
        matchLabels:
          key13: value44
          key38: value14
